<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/tv_input"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/blue3"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_seven"
            android:layout_width="7dp"
            android:layout_height="85dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:backgroundTint="@color/blue4"/>

        <Button
            android:id="@+id/btn_eight"
            android:layout_width="8dp"
            android:layout_height="85dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:backgroundTint="@color/blue4"/>

        <Button
            android:id="@+id/btn_nine"
            android:layout_width="8dp"
            android:layout_height="87dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:backgroundTint="@color/blue4"/>

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="operator"
            android:text="@string/div"
            android:backgroundTint="@color/blue4"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_four"
            android:layout_width="2dp"
            android:layout_height="82dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:backgroundTint="@color/blue4"/>
        <Button
            android:id="@+id/btn_five"
            android:layout_width="0dp"
            android:onClick="onDigit"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:layout_margin="2dp"
            android:backgroundTint="@color/blue4"/>

        <Button
            android:id="@+id/btn_six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:backgroundTint="@color/blue4"/>

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="0dp"
            android:onClick="operator"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mul"
            android:layout_margin="2dp"
            android:backgroundTint="@color/blue4"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_one"
            android:layout_width="4dp"
            android:layout_height="91dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:backgroundTint="@color/blue4"/>

        <Button
            android:id="@+id/btn_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:backgroundTint="@color/blue4"/>

        <Button
            android:id="@+id/btn_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:backgroundTint="@color/blue4"/>

        <Button
            android:id="@+id/btn_min"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="operator"
            android:text="@string/minus"
            android:backgroundTint="@color/blue4"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dot"
            android:layout_width="2dp"
            android:layout_height="88dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="operator"
            android:text="@string/dot"
            android:backgroundTint="@color/blue4"/>

        <Button
            android:id="@+id/btn_zero"
            android:layout_width="2dp"
            android:layout_height="88dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_0"
            android:backgroundTint="@color/blue4"/>

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onClear"
            android:text="@string/clear"
            android:backgroundTint="@color/blue4"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="operator"
            android:text="@string/add"
            android:backgroundTint="@color/blue4"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/equals"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onEqual"
            android:text="@string/equals"
            android:backgroundTint="@color/blue4"/>
    </LinearLayout>
</LinearLayout>